--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="home">Home</string>
     <string name="upload">Upload</string>
     <string name="profile">Profile</string>
+    <string name="select">Select</string>
 </resources>
